--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Запуск C++ через g++",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/main",
+      "program": "${workspaceFolder}/bin/calc",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
